Updated pom.xml for stabilization